# confitec-analytics-streamlit

./: README.md  Sala ágil - Squad de Melhorias tecnicas.xlsx  main.py  pyproject.toml  requirements.txt  rm_scrum_task.csv
