[project]
name = "confitec-analytics-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Cantidio",email = "ppcantidio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "ruff (>=0.11.7,<0.12.0)",
    "plotly (>=5.18.0,<6.0.0)"
]

[tool.poetry]
packages = [
    {include = "*.py"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
